--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -40,12 +40,13 @@ alphaTest.gbuffers_skybasic=false
 alphaTest.gbuffers_skytextured=false
 
 sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH
-screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Performance_Impact_Key Credits
-screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections]
+screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Performance_Impact_Key Credits 
+screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] [DEV]
 
 screen.Overworld=[Atmospherics] [Lighting]
 screen.Nether=[N_Atmospherics] [N_Lighting] [N_MISC]
 screen.End=[E_Atmospherics] [E_Lighting] [E_MISC]
+screen.DEV=*
 
 screen.Wavy_stuff = WAVY_PLANTS <empty> WAVY_STRENGTH WAVY_SPEED 
 screen.Atmospherics= VOLUMETRIC_CLOUDS VOLUMETRIC_FOG CLOUDS_QUALITY CLOUDS_SPEED [Fog_Color] [Fog_Densities] SEA_LEVEL VL_SAMPLES BLOOMY_FOG 
