--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -41,7 +41,7 @@ alphaTest.gbuffers_skytextured=false
 
 sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH
 screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Performance_Impact_Key Credits 
-screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] [DEV]
+screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] [DEV] TOASTER
 
 screen.Overworld=[Atmospherics] [Lighting]
 screen.Nether=[N_Atmospherics] [N_Lighting] [N_MISC]
@@ -171,11 +171,23 @@ uniform.float.shadowMaxProj = 150.0/abs(sunPosY)
 
 
 profile.Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=6 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.5 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=25  !DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=1 !TOASTER
+
+
 profile.SSPT-Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=6 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.5 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=25  !DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=1 MAX_RAYLENGTH=15 !TOASTER
+
+
 profile.SSPT-Low= shadowMapResolution=2048 shadowDistance=120 Min_Shadow_Filter_Radius=1.9 SHADOW_FILTER_SAMPLE_COUNT=9 Variable_Penumbra_Shadows VPS_Search_Samples=6 SSAO SSAO_SAMPLES=3 VL_SAMPLES=4 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=1 MAX_RAYLENGTH=1 !TOASTER
-profile.SSPotato= shadowMapResolution=2048 shadowDistance=120 Min_Shadow_Filter_Radius=1.9 SHADOW_FILTER_SAMPLE_COUNT=9 Variable_Penumbra_Shadows VPS_Search_Samples=6 SSAO SSAO_SAMPLES=3 VL_SAMPLES=4 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=1 MAX_RAYLENGTH=1 TOASTER
+
+
+profile.SSPotato= shadowMapResolution=2048 shadowDistance=115 Min_Shadow_Filter_Radius=1.9 SHADOW_FILTER_SAMPLE_COUNT=9 Variable_Penumbra_Shadows VPS_Search_Samples=6 SSAO SSAO_SAMPLES=3 VL_SAMPLES=4 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.20 SCREENSPACE_REFLECTIONS rayMarchSampleCount=2 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=1 MAX_RAYLENGTH=1 TOASTER
+
+
 profile.Medium= shadowMapResolution=1024 shadowDistance=120 Min_Shadow_Filter_Radius=1.9 SHADOW_FILTER_SAMPLE_COUNT=9 Variable_Penumbra_Shadows VPS_Search_Samples=6 SSAO SSAO_SAMPLES=5 VL_SAMPLES=4 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=1 !TOASTER
+
+
 profile.Low= shadowMapResolution=768 shadowDistance=105 Min_Shadow_Filter_Radius=2.25 SHADOW_FILTER_SAMPLE_COUNT=6 Variable_Penumbra_Shadows VPS_Search_Samples=4 SSAO SSAO_SAMPLES=3 VL_SAMPLES=2 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.15 SCREENSPACE_REFLECTIONS rayMarchSampleCount=2 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=1 !TOASTER
+
+
 profile.Toaster= shadowMapResolution=512 shadowDistance=100 Min_Shadow_Filter_Radius=3.0 SHADOW_FILTER_SAMPLE_COUNT=2 !Variable_Penumbra_Shadows VPS_Search_Samples=2 !SSAO SSAO_SAMPLES=1 VL_SAMPLES=1 !VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.1 !SCREENSPACE_REFLECTIONS rayMarchSampleCount=2 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS   shadowDistanceRenderMul=-1.0 !VOLUMETRIC_FOG !SSPT RAYS=1 TOASTER
 
 
