--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -8,7 +8,7 @@ block.79 = minecraft:ice
 block.1= minecraft:beacon	
 block.2 = minecraft:item_frame		  
 #block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:end_rod minecraft:magma_block minecraft:sea_lantern  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:end_gateway minecraft:campfire:lit=true 
-block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:magma_block  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:campfire:lit=true 
+block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:magma_block  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:campfire:lit=true minecraft:shroomlight
 block.10007 = minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_fire minecraft:end_rod minecraft:sea_lantern minecraft:soul_lantern minecraft:end_gateway minecraft:soul_campfire:lit=true 
 block.10006 = minecraft:lava minecraft:fire
 #else
