--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -95,7 +95,7 @@ screen.E_MISC = E_SATURATION E_CROSSTALK
 screen.Tonemapping = TONEMAP <empty> USE_ACES_COLORSPACE_APPROXIMATION SATURATION <empty> CROSSTALK FinalR FinalG FinalB
 screen.DepthOfField = DOF HQ_DOF HEXAGONAL_BOKEH PAINTERY AUTOFOCUS focal aperture MANUAL_FOCUS FAR_BLUR_ONLY
 texture.noise=texture/noises.png
-
+texture.composite.colortex6=texture/blueNoise.png
 
 
 separateAo=true
