--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -83,7 +83,7 @@ screen.Shadows = [Filtering] shadowMapResolution shadowDistance <empty> <empty> 
 
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
 
-screen.POM = POM POM2 USE_LUMINANCE_AS_HEIGHTMAP POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
+screen.POM = POM <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
 
 screen.SSPT = SSPT RAYS RT_FILTER STEPSIZE MAXSTEPS MAXLENGTH
 
