--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -77,13 +77,13 @@ screen.Ambient = MIN_LIGHT_AMOUNT SEPARATE_AO ambientOcclusionLevel Ambient_Mult
 screen.N_Ambient = N_MIN_LIGHT_AMOUNT N_Ambient_Mult
 screen.E_Ambient = E_MIN_LIGHT_AMOUNT E_Ambient_Mult
 
-screen.Shading = [Shadows] [POM] <empty> <empty> DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING <empty> <empty> [SSPT]
+screen.Shading = [Shadows] [PBR] <empty> <empty> DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING <empty> <empty> [SSPT]
 
 screen.Shadows = [Filtering] shadowMapResolution shadowDistance <empty> <empty> <empty> SCREENSPACE_CONTACT_SHADOWS CLOUDS_SHADOWS CLOUDS_SHADOWS_STRENGTH Stochastic_Transparent_Shadows SHADOW_FRUSTRUM_CULLING CAVE_LIGHT_LEAK_FIX SHADOW_DISABLE_ALPHA_MIPMAPS shadowDistanceRenderMul  <empty> <empty> <empty> <empty>   SSAO SSAO_STRENGTH SSAO_SAMPLES
 
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
 
-screen.POM = POM <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
+screen.PBR = POM <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
 
 screen.SSPT = SSPT RAYS RT_FILTER STEPSIZE MAXSTEPS MAXLENGTH
 
