remove shadow settings

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -77,9 +77,8 @@ screen.Ambient = MIN_LIGHT_AMOUNT SEPARATE_AO ambientOcclusionLevel Ambient_Mult
 screen.N_Ambient = N_MIN_LIGHT_AMOUNT N_Ambient_Mult
 screen.E_Ambient = E_MIN_LIGHT_AMOUNT E_Ambient_Mult
 
-screen.Shading = [Shadows] [POM] <empty> <empty> DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING <empty> <empty> SSPT RAYS RT_FILTER MAX_RAYLENGTH
+screen.Shading = [POM] <empty> DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING <empty> <empty> SSAO <empty> SSAO_STRENGTH SSAO_SAMPLES
 
-screen.Shadows = [Filtering] shadowMapResolution shadowDistance <empty> <empty> <empty> SCREENSPACE_CONTACT_SHADOWS CLOUDS_SHADOWS CLOUDS_SHADOWS_STRENGTH Stochastic_Transparent_Shadows SHADOW_FRUSTRUM_CULLING CAVE_LIGHT_LEAK_FIX SHADOW_DISABLE_ALPHA_MIPMAPS shadowDistanceRenderMul  <empty> <empty> <empty> <empty>   SSAO SSAO_STRENGTH SSAO_SAMPLES
 
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
 
@@ -151,9 +150,6 @@ variable.float.normView = sqrt(viewDirX*viewDirX + viewDirY*viewDirY + viewDirZ*
 
 
 profile.Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=6 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.5 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=25  !DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=1 !TOASTER
-
-
-profile.SSPotato= shadowMapResolution=2048 shadowDistance=115 Min_Shadow_Filter_Radius=1.9 SHADOW_FILTER_SAMPLE_COUNT=9 !Variable_Penumbra_Shadows VPS_Search_Samples=6 SSAO SSAO_SAMPLES=3 VL_SAMPLES=4 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.20 SCREENSPACE_REFLECTIONS rayMarchSampleCount=2 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=1 MAX_RAYLENGTH=1 TOASTER
 
 
 profile.Low= shadowMapResolution=768 shadowDistance=105 Min_Shadow_Filter_Radius=2.25 SHADOW_FILTER_SAMPLE_COUNT=6 Variable_Penumbra_Shadows VPS_Search_Samples=4 SSAO SSAO_SAMPLES=3 VL_SAMPLES=2 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.15 SCREENSPACE_REFLECTIONS rayMarchSampleCount=2 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=1 !TOASTER
