--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -21,7 +21,9 @@ screen.POM.columns=2
 #Get the correct alpha value : S_A*(1-DST_A)+DST_A
 blend.gbuffers_terrain=off
 blend.gbuffers_textured= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
-blend.gbuffers_armor_glint= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
+#f this one
+#blend.gbuffers_armor_glint= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
+blend.gbuffers_armor_glint= off 
 blend.gbuffers_textured_lit= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
 blend.gbuffers_weather= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
 blend.gbuffers_water= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
