POM /= PBR, let's sort that out

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -86,7 +86,7 @@ screen.Shadows = [Filtering] shadowMapResolution shadowDistance <empty> <empty> 
 
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
 
-screen.PBR = POM <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
+screen.PBR = PBR <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
 
 screen.SSPT = SSPT RAYS RT_FILTER STEPSIZE MAXSTEPS MAXLENGTH
 
