--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -41,7 +41,7 @@ alphaTest.gbuffers_water=false
 alphaTest.gbuffers_skybasic=false
 alphaTest.gbuffers_skytextured=false
 
-sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH
+sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH RENDER_SCALE_Y RENDER_SCALE_X STEPSIZE MAXSTEPS MAXLENGTH
 #screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Performance_Impact_Key Credits 
 screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Credits 
 screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] [DEV] TOASTER
@@ -61,7 +61,7 @@ screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientR
 screen.Water = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount Water_Top_Layer lightMapDepthEstimation [Advanced]
 screen.Reflections =  SCREENSPACE_REFLECTIONS SSR_STEPS SUN_MICROFACET_SPECULAR
 screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
-screen.TAA_OPTIONS= TAA <empty> FLICKER_REDUCTION BLEND_FACTOR ANTI_GHOSTING MOTION_REJECTION CLOSEST_VELOCITY NO_CLIP
+screen.TAA_OPTIONS= TAA <empty> FLICKER_REDUCTION BLEND_FACTOR ANTI_GHOSTING MOTION_REJECTION CLOSEST_VELOCITY NO_CLIP <empty> <empty> TAA_UPSCALING <empty> RENDER_SCALE_Y RENDER_SCALE_X 
 
 screen.Lighting= [Torch] [Sky] [Ambient]
 screen.N_Lighting= [N_Torch] [N_Sky] [N_Ambient]
@@ -88,7 +88,7 @@ screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filte
 
 screen.PBR = PBR <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
 
-screen.SSPT = SSPT RAYS RT_FILTER STEPSIZE MAXSTEPS MAXLENGTH
+screen.SSPT = SSPT RT_FILTER <empty> <empty> RAYS STEPSIZE MAXSTEPS MAXLENGTH
 
 screen.Camera = AUTO_EXPOSURE Exposure_Speed EXPOSURE_MULTIPLIER  Manual_exposure_value BLOOM_STRENGTH [Tonemapping]  [DepthOfField] [Purkinje_effect]
 
