reflections, not even once

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -174,10 +174,10 @@ uniform.float.shadowMaxProj = 150.0/abs(sunPosY)
 # Profiles #
 
 
-profile.Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=4 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=4 !TOASTER
+profile.Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=4 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG !SSPT RAYS=4 !TOASTER
 
 
-profile.SSPT-Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=4 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=4 MAX_RAYLENGTH=15 !TOASTER
+profile.SSPT-Normal= shadowMapResolution=3172 shadowDistance=150 Min_Shadow_Filter_Radius=1.412 SHADOW_FILTER_SAMPLE_COUNT=15 Variable_Penumbra_Shadows VPS_Search_Samples=8 SSAO SSAO_SAMPLES=4 VL_SAMPLES=6 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.25 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=4 MAX_RAYLENGTH=15 !TOASTER
 
 
 profile.SSPT-Low= shadowMapResolution=2048 shadowDistance=120 Min_Shadow_Filter_Radius=1.9 SHADOW_FILTER_SAMPLE_COUNT=9 Variable_Penumbra_Shadows VPS_Search_Samples=6 SSAO SSAO_SAMPLES=3 VL_SAMPLES=4 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.2 SCREENSPACE_REFLECTIONS rayMarchSampleCount=4 SSR_STEPS=15  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=-1.0 VOLUMETRIC_FOG SSPT RAYS=4 MAX_RAYLENGTH=1 !TOASTER
@@ -195,7 +195,7 @@ profile.Low= shadowMapResolution=768 shadowDistance=105 Min_Shadow_Filter_Radius
 profile.Toaster= shadowMapResolution=512 shadowDistance=100 Min_Shadow_Filter_Radius=3.0 SHADOW_FILTER_SAMPLE_COUNT=2 !Variable_Penumbra_Shadows VPS_Search_Samples=2 !SSAO SSAO_SAMPLES=1 VL_SAMPLES=1 !VOLUMETRIC_CLOUDS CLOUDS_QUALITY=0.1 !SCREENSPACE_REFLECTIONS rayMarchSampleCount=2 SSR_STEPS=10  !DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING !Stochastic_Transparent_Shadows !SHADOW_DISABLE_ALPHA_MIPMAPS !SCREENSPACE_CONTACT_SHADOWS   shadowDistanceRenderMul=-1.0 !VOLUMETRIC_FOG !SSPT RAYS=1 TOASTER
 
 
-//profile.Extreme= shadowMapResolution=6144 shadowDistance=256 Min_Shadow_Filter_Radius=1.6 SHADOW_FILTER_SAMPLE_COUNT=30 Variable_Penumbra_Shadows VPS_Search_Samples=20 SSAO SSAO_SAMPLES=20 VL_SAMPLES=20 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=1.0 SCREENSPACE_REFLECTIONS rayMarchSampleCount=12 SSR_STEPS=100  DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING Stochastic_Transparent_Shadows SHADOW_DISABLE_ALPHA_MIPMAPS SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=1.0 SSPT RAYS=5
+//profile.Extreme= shadowMapResolution=6144 shadowDistance=256 Min_Shadow_Filter_Radius=1.6 SHADOW_FILTER_SAMPLE_COUNT=30 Variable_Penumbra_Shadows VPS_Search_Samples=20 SSAO SSAO_SAMPLES=20 VL_SAMPLES=20 VOLUMETRIC_CLOUDS CLOUDS_QUALITY=1.0 SCREENSPACE_REFLECTIONS rayMarchSampleCount=12 SSR_STEPS=100  DISABLE_ALPHA_MIPMAPS !BICUBIC_UPSCALING Stochastic_Transparent_Shadows SHADOW_DISABLE_ALPHA_MIPMAPS SCREENSPACE_CONTACT_SHADOWS  shadowDistanceRenderMul=1.0 SSPT RAYS=5
 
 
 
