add back smooth autofocus, add water biome colour, add dof hand exclusion

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -41,7 +41,7 @@ alphaTest.gbuffers_water=false
 alphaTest.gbuffers_skybasic=false
 alphaTest.gbuffers_skytextured=false
 
-sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH RENDER_SCALE_Y RENDER_SCALE_X STEPSIZE MAXSTEPS MAXLENGTH MOTION_BLUR_STRENGTH
+sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH RENDER_SCALE_Y RENDER_SCALE_X STEPSIZE MAXSTEPS MAXLENGTH MOTION_BLUR_STRENGTH water_blend
 #screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Performance_Impact_Key Credits 
 screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Credits 
 screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] [DEV] TOASTER
@@ -58,7 +58,7 @@ screen.E_Atmospherics=  E_VL_SAMPLES [E_Fog_Color] [E_Fog_Densities] E_BLOOMY_FO
 
 screen.Fog_Densities = FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT ATMOSPHERIC_DENSITY Underwater_Fog_Density
 screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG fog_coefficientRayleighB fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB
-screen.Water = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount Water_Top_Layer lightMapDepthEstimation [Advanced]
+screen.Water = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount Water_Top_Layer lightMapDepthEstimation water_blend [Advanced]
 screen.Reflections =  SCREENSPACE_REFLECTIONS SSR_STEPS SUN_MICROFACET_SPECULAR
 screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
 screen.TAA_OPTIONS= TAA FXAA FLICKER_REDUCTION BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP <empty> <empty> TAA_UPSCALING <empty> RENDER_SCALE_Y RENDER_SCALE_X 
@@ -98,7 +98,7 @@ screen.N_MISC = N_SATURATION N_CROSSTALK
 screen.E_MISC = E_SATURATION E_CROSSTALK
 
 screen.Tonemapping = TONEMAP <empty> USE_ACES_COLORSPACE_APPROXIMATION SATURATION <empty> CROSSTALK FinalR FinalG FinalB
-screen.DepthOfField = DOF HQ_DOF HEXAGONAL_BOKEH PAINTERY AUTOFOCUS focal aperture MANUAL_FOCUS FAR_BLUR_ONLY
+screen.DepthOfField = DOF HQ_DOF HEXAGONAL_BOKEH PAINTERY AUTOFOCUS focal aperture MANUAL_FOCUS FAR_BLUR_ONLY EXCLUDE_HAND
 texture.noise=texture/noises.png
 texture.composite.colortex6=texture/blueNoise.png
 
