Manual+ Focus Point, Blur Mode and Bokeh Mode

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -98,7 +98,7 @@ screen.N_MISC = N_SATURATION N_CROSSTALK
 screen.E_MISC = E_SATURATION E_CROSSTALK
 
 screen.Tonemapping = TONEMAP <empty> USE_ACES_COLORSPACE_APPROXIMATION SATURATION <empty> CROSSTALK FinalR FinalG FinalB
-screen.DepthOfField = DOF HQ_DOF HEXAGONAL_BOKEH PAINTERY AUTOFOCUS focal aperture MANUAL_FOCUS FAR_BLUR_ONLY EXCLUDE_HAND
+screen.DepthOfField = DOF BOKEH_MODE EXCLUDE_MODE <empty> <empty> <empty> DOF_MODE MANUAL_FOCUS focal aperture
 texture.noise=texture/noises.png
 texture.composite.colortex6=texture/blueNoise.png
 
