--- a/shaders/world1/shaders.properties
+++ b/shaders/world1/shaders.properties
@@ -56,7 +56,7 @@ screen.POM = POM_MAP_RES POM POM_DEPTH MAX_ITERATIONS MAX_DIST USE_LUMINANCE_AS_
 screen.Camera = EXPOSURE_MULTIPLIER Exposure_Speed AUTO_EXPOSURE Manual_exposure_value BLOOM_STRENGTH FinalR FinalG FinalB [Tonemapping]  [DepthOfField] [Purkinje_effect]
 screen.Purkinje_effect = Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier
 screen.Tonemapping = TONEMAP USE_ACES_COLORSPACE_APPROXIMATION SATURATION CROSSTALK
-screen.DepthOfField = DOF HQ_DOF HEXAGONAL_BOKEH AUTOFOCUS focal aperture MANUAL_FOCUS FAR_BLUR_ONLY
+screen.DepthOfField = DOF BOKEH_MODE EXCLUDE_MODE <empty> <empty> <empty> DOF_MODE MANUAL_FOCUS focal aperture
 texture.noise=texture/noises.png
 
 separateAo=true
