add toggle to turn SSPT into RTAO

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -88,7 +88,7 @@ screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filte
 
 screen.PBR = PBR <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
 
-screen.SSPT = SSPT RT_FILTER <empty> <empty> RAYS STEPSIZE MAXSTEPS MAXLENGTH
+screen.SSPT = SSPT RT_FILTER <empty> <empty> RAYS STEPSIZE MAXSTEPS MAXLENGTH SSPT_MODE
 
 screen.Camera = AUTO_EXPOSURE Exposure_Speed EXPOSURE_MULTIPLIER  Manual_exposure_value BLOOM_STRENGTH [Tonemapping]  [DepthOfField] [Purkinje_effect] MOTION_BLUR MOTION_BLUR_STRENGTH
 
