--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,16 +1,50 @@
 #if MC_VERSION >= 11300
+
+
 block.10001= minecraft:acacia_sapling minecraft:birch_sapling minecraft:dark_oak_sapling minecraft:jungle_sapling minecraft:oak_sapling minecraft:spruce_sapling minecraft:grass minecraft:dead_bush minecraft:fern minecraft:dandelion minecraft:poppy minecraft:blue_orchid minecraft:allium minecraft:azure_bluet minecraft:orange_tulip minecraft:pink_tulip minecraft:red_tulip minecraft:white_tulip minecraft:oxeye_daisy minecraft:brown_mushroom minecraft:red_mushroom minecraft:wheat minecraft:nether_wart minecraft:carrots minecraft:potatoes minecraft:beetroots minecraft:lily_of_the_valley minecraft:cornflower minecraft:wither_rose
-block.10003 = minecraft:acacia_leaves minecraft:birch_leaves minecraft:dark_oak_leaves minecraft:jungle_leaves minecraft:oak_leaves minecraft:spruce_leaves minecraft:vine
-block.10004 = minecraft:cobweb minecraft:sugar_cane minecraft:pumpkin_seeds minecraft:lily_pad minecraft:lilac minecraft:sunflower minecraft:tall_grass minecraft:rose_bush minecraft:peony minecraft:large_fern
+
 block.10002= minecraft:black_stained_glass minecraft:black_stained_glass_pane minecraft:blue_stained_glass minecraft:blue_stained_glass_pane  minecraft:brown_stained_glass minecraft:brown_stained_glass_pane minecraft:cyan_stained_glass minecraft:cyan_stained_glass_pane  minecraft:gray_stained_glass minecraft:gray_stained_glass_pane minecraft:green_stained_glass minecraft:green_stained_glass_pane minecraft:light_blue_stained_glass minecraft:light_blue_stained_glass_pane minecraft:light_gray_stained_glass minecraft:light_gray_stained_glass_pane minecraft:lime_stained_glass minecraft:lime_stained_glass_pane minecraft:magenta_stained_glass minecraft:magenta_stained_glass_pane minecraft:orange_stained_glass minecraft:orange_stained_glass_pane minecraft:pink_stained_glass minecraft:pink_stained_glass_pane minecraft:purple_stained_glass minecraft:purple_stained_glass_pane minecraft:red_stained_glass minecraft:red_stained_glass_pane minecraft:white_stained_glass minecraft:white_stained_glass_pane minecraft:yellow_stained_glass minecraft:yellow_stained_glass_pane minecraft:glass_pane minecraft:glass
-block.8 = minecraft:water minecraft:flowing_water
-block.79 = minecraft:ice
-block.1= minecraft:beacon	
-block.2 = minecraft:item_frame		  
-#block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:end_rod minecraft:magma_block minecraft:sea_lantern  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:end_gateway minecraft:campfire:lit=true 
+
+block.10003 = oak_leaves minecraft:spruce_leaves minecraft:birch_leaves minecraft:jungle_leaves minecraft:acacia_leaves minecraft:dark_oak_leaves
+
 block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:magma_block  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:campfire:lit=true minecraft:shroomlight minecraft:nether_portal
-block.10007 = minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_fire minecraft:end_rod minecraft:sea_lantern minecraft:soul_lantern minecraft:end_gateway minecraft:soul_campfire:lit=true 
+
 block.10006 = minecraft:lava minecraft:fire
+
+block.10007 = minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_fire minecraft:end_rod minecraft:sea_lantern minecraft:soul_lantern minecraft:end_gateway minecraft:soul_campfire:lit=true 
+
+block.10008=minecraft:sunflower:half=lower minecraft:lilac:half=lower minecraft:tall_grass:half=lower minecraft:large_fern:half=lower minecraft:rose_bush:half=lower minecraft:peony:half=lower minecraft:tall_seagrass:half=lower
+
+block.10009=minecraft:sunflower:half=upper minecraft:lilac:half=upper minecraft:tall_grass:half=upper minecraft:large_fern:half=upper minecraft:rose_bush:half=upper minecraft:peony:half=upper minecraft:tall_seagrass:half=upper
+
+block.10010=minecraft:vine minecraft:sugar_cane minecraft:cobweb minecraft:nether_wart
+
+
+block.1= minecraft:beacon
+	
+block.2 = minecraft:item_frame	
+
+block.8 = minecraft:water minecraft:flowing_water
+
+block.79 = minecraft:ice
+	  
+block.100 = minecraft:cyan_wall_banner
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 #else
 #wavy plants, translucent, bottom vertices not moving
 block.10001= 6 31 32 37 38 39 40 59 115 141 142 207
@@ -20,6 +54,12 @@ block.10003 = 18 106 161
 block.10004 = 30 83 104 105 111 175 176 177
 #reflective surfaces (not including water and ice)
 block.10002=95 160
+
+block.10008=minecraft:double_plant:half=lower minecraft:tall_grass:half=lower
+block.10009=minecraft:double_plant:half=upper minecraft:tall_grass:half=upper
+
+
+
 #endif
 
 layer.translucent=minecraft:glass_pane minecraft:glass
