-Insert message here-

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -17,6 +17,7 @@ screen.Advanced.columns=3
 screen.Wavy_stuff.columns=1
 screen.Reflections.columns=1
 screen.POM.columns=2
+screen.Camera.columns=3
 
 #Get the correct alpha value : S_A*(1-DST_A)+DST_A
 blend.gbuffers_terrain=off
@@ -41,23 +42,25 @@ alphaTest.gbuffers_water=false
 alphaTest.gbuffers_skybasic=false
 alphaTest.gbuffers_skytextured=false
 
-sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH RENDER_SCALE_Y RENDER_SCALE_X STEPSIZE MAXSTEPS MAXLENGTH MOTION_BLUR_STRENGTH water_blend
+sliders=RAYS BUMP_MULT BLOOMY_FOG CLOUDS_SPEED FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT WAVY_SPEED WAVY_STRENGTH ANTI_GHOSTING BLOOM_STRENGTH Underwater_Fog_Density shadowDistance shadowDistanceRenderMul FinalR FinalG FinalB Ambient_Mult Sky_Brightness fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB sun_illuminance sunColorG sunColorB sunColorR sky_mieg sky_coefficientMieB sky_coefficientMieG sky_coefficientMieR sky_coefficientRayleighB sky_coefficientRayleighG sky_coefficientRayleighR CLOUDS_QUALITY EXPOSURE_MULTIPLIER MIN_LIGHT_AMOUNT TORCH_R TORCH_G TORCH_B TORCH_AMOUNT shadowMapResolution sunPathRotation SKY_BRIGHTNESS_DAY SKY_BRIGHTNESS_NIGHT BLEND_FACTOR FLICKER_REDUCTION MOTION_REJECTION VL_SAMPLES Exposure_Speed POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST SSR_STEPS ambientOcclusionLevel SEA_LEVEL ATMOSPHERIC_DENSITY CLOUDS_SHADOWS_STRENGTH moon_illuminance moonColorR moonColorG moonColorB fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG SATURATION Manual_exposure_value focal aperture MANUAL_FOCUS SHADOW_FILTER_SAMPLE_COUNT Max_Filter_Depth VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius SSAO_SAMPLES Water_Top_Layer fog_coefficientRayleighB SHARPENING rayMarchSampleCount Dirt_Mie_Phase Dirt_Amount Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B Purkinje_strength Purkinje_strength Purkinje_R Purkinje_G Purkinje_B Purkinje_Multiplier CROSSTALK MAX_RAYLENGTH RENDER_SCALE_Y RENDER_SCALE_X STEPSIZE MAXSTEPS MAXLENGTH MOTION_BLUR_STRENGTH water_blend VL_RENDER_RESOLUTION cloud_LevelOfDetail cloud_ShadowLevelOfDetail cloud_LevelOfDetailLQ cloud_ShadowLevelOfDetailLQ minRayMarchSteps maxRayMarchSteps minRayMarchStepsLQ maxRayMarchStepsLQ cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
 #screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Performance_Impact_Key Credits 
 screen= <profile> <empty> [General] [Overworld] [Nether] [End] <empty> Credits TOASTER
-screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] [DEV] 
 
-screen.Overworld=[Atmospherics] [Lighting]
+
+screen.General=[TAA_OPTIONS] [Camera] [Shading] [Wavy_stuff] [Water] [Reflections] <empty> <empty> [DEV] 
+
+screen.Overworld=[Atmospherics] [Lighting] [Clouds]
 screen.Nether=[N_Atmospherics] [N_Lighting] [N_MISC]
 screen.End=[E_Atmospherics] [E_Lighting] [E_MISC]
 screen.DEV=*
 
 screen.Wavy_stuff = WAVY_PLANTS <empty> WAVY_STRENGTH WAVY_SPEED 
-screen.Atmospherics= VOLUMETRIC_CLOUDS VOLUMETRIC_FOG CLOUDS_QUALITY CLOUDS_SPEED [Fog_Color] [Fog_Densities] SEA_LEVEL VL_SAMPLES BLOOMY_FOG 
+screen.Atmospherics=  VOLUMETRIC_FOG   [Fog_Color] [Fog_Densities] SEA_LEVEL VL_SAMPLES BLOOMY_FOG VL_RENDER_RESOLUTION
 screen.N_Atmospherics=  N_VL_SAMPLES [N_Fog_Color] [N_Fog_Densities] N_BLOOMY_FOG
 screen.E_Atmospherics=  E_VL_SAMPLES [E_Fog_Color] [E_Fog_Densities] E_BLOOMY_FOG
 
 screen.Fog_Densities = FOG_RAIN_MULTIPLIER FOG_TOD_MULTIPLIER CLOUDY_FOG_AMOUNT BASE_FOG_AMOUNT ATMOSPHERIC_DENSITY Underwater_Fog_Density
-screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG fog_coefficientRayleighB fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB
+screen.Fog_Color = fog_mieg1 fog_mieg2 fog_coefficientRayleighR fog_coefficientRayleighG fog_coefficientRayleighB fog_coefficientMieR fog_coefficientMieG fog_coefficientMieB 
 screen.Water = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount Water_Top_Layer lightMapDepthEstimation water_blend [Advanced]
 screen.Reflections =  SCREENSPACE_REFLECTIONS SSR_STEPS SUN_MICROFACET_SPECULAR
 screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
@@ -80,6 +83,8 @@ screen.Ambient = MIN_LIGHT_AMOUNT SEPARATE_AO ambientOcclusionLevel Ambient_Mult
 screen.N_Ambient = N_MIN_LIGHT_AMOUNT N_Ambient_Mult
 screen.E_Ambient = E_MIN_LIGHT_AMOUNT E_Ambient_Mult
 
+screen.Clouds = VOLUMETRIC_CLOUDS CLOUDS_QUALITY CLOUDS_SPEED cloud_LevelOfDetail cloud_ShadowLevelOfDetail cloud_LevelOfDetailLQ cloud_ShadowLevelOfDetailLQ minRayMarchSteps maxRayMarchSteps minRayMarchStepsLQ maxRayMarchStepsLQ cloudDensity cloudCoverage fbmAmount fbmPower1 fbmPower2 cloudMieG cloudMieG2 cloudMie2Multiplier
+
 screen.Shading = [Shadows] [PBR] <empty> <empty> DISABLE_ALPHA_MIPMAPS BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING <empty> <empty> [SSPT]
 
 screen.Shadows = [Filtering] shadowMapResolution shadowDistance <empty> <empty> <empty> SCREENSPACE_CONTACT_SHADOWS CLOUDS_SHADOWS CLOUDS_SHADOWS_STRENGTH Stochastic_Transparent_Shadows SHADOW_FRUSTRUM_CULLING CAVE_LIGHT_LEAK_FIX SHADOW_DISABLE_ALPHA_MIPMAPS shadowDistanceRenderMul  <empty> <empty> <empty> <empty>   SSAO SSAO_STRENGTH SSAO_SAMPLES
@@ -88,9 +93,9 @@ screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filte
 
 screen.PBR = PBR <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
 
-screen.SSPT = SSPT RT_FILTER <empty> <empty> RAYS STEPSIZE MAXSTEPS MAXLENGTH SSPT_MODE
+screen.SSPT = SSPT GI  <empty> <empty> RAYS STEPSIZE MAXSTEPS MAXLENGTH SSPT_MODE RT_FILTER
 
-screen.Camera = AUTO_EXPOSURE Exposure_Speed EXPOSURE_MULTIPLIER  Manual_exposure_value BLOOM_STRENGTH [Tonemapping]  [DepthOfField] [Purkinje_effect] MOTION_BLUR MOTION_BLUR_STRENGTH
+screen.Camera = AUTO_EXPOSURE <empty> <empty> Exposure_Speed EXPOSURE_MULTIPLIER  Manual_exposure_value <empty> <empty> <empty> BLOOM_STRENGTH BLOOM_QUALITY <empty> MOTION_BLUR MOTION_BLUR_STRENGTH <empty>  <empty> <empty> <empty> [Tonemapping]  [DepthOfField] [Purkinje_effect] CHROMATIC VIGNETTE GRAIN
 
 screen.Purkinje_effect = Purkinje_strength Purkinje_Multiplier Purkinje_strength Purkinje_R Purkinje_G Purkinje_B 
 
@@ -98,7 +103,7 @@ screen.N_MISC = N_SATURATION N_CROSSTALK
 screen.E_MISC = E_SATURATION E_CROSSTALK
 
 screen.Tonemapping = TONEMAP <empty> USE_ACES_COLORSPACE_APPROXIMATION SATURATION <empty> CROSSTALK FinalR FinalG FinalB
-screen.DepthOfField = DOF BOKEH_MODE EXCLUDE_MODE <empty> <empty> <empty> DOF_MODE MANUAL_FOCUS focal aperture
+screen.DepthOfField = DOF BOKEH_MODE EXCLUDE_MODE <empty> <empty> <empty> DOF_MODE MANUAL_FOCUS focal aperture DoF_Adaptation_Speed
 texture.noise=texture/noises.png
 texture.composite.colortex6=texture/blueNoise.png
 
