--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,17 +1,21 @@
 #if MC_VERSION >= 11300
 
 
-block.10001= minecraft:acacia_sapling minecraft:birch_sapling minecraft:dark_oak_sapling minecraft:jungle_sapling minecraft:oak_sapling minecraft:spruce_sapling minecraft:grass minecraft:dead_bush minecraft:fern minecraft:dandelion minecraft:poppy minecraft:blue_orchid minecraft:allium minecraft:azure_bluet minecraft:orange_tulip minecraft:pink_tulip minecraft:red_tulip minecraft:white_tulip minecraft:oxeye_daisy minecraft:brown_mushroom minecraft:red_mushroom minecraft:wheat minecraft:nether_wart minecraft:carrots minecraft:potatoes minecraft:beetroots minecraft:lily_of_the_valley minecraft:cornflower minecraft:wither_rose
+block.10001= minecraft:wheat minecraft:beetroots minecraft:potatoes minecraft:carrots minecraft:oxeye_daisy minecraft:pink_tulip minecraft:white_tulip minecraft:orange_tulip minecraft:red_tulip minecraft:azure_bluet minecraft:allium minecraft:blue_orchid minecraft:poppy minecraft:dandelion minecraft:grass minecraft:dead_bush minecraft:fern minecraft:oak_sapling minecraft:spruce_sapling minecraft:birch_sapling minecraft:jungle_sapling minecraft:acacia_sapling minecraft:dark_oak_sapling
 
 block.10002= minecraft:black_stained_glass minecraft:black_stained_glass_pane minecraft:blue_stained_glass minecraft:blue_stained_glass_pane  minecraft:brown_stained_glass minecraft:brown_stained_glass_pane minecraft:cyan_stained_glass minecraft:cyan_stained_glass_pane  minecraft:gray_stained_glass minecraft:gray_stained_glass_pane minecraft:green_stained_glass minecraft:green_stained_glass_pane minecraft:light_blue_stained_glass minecraft:light_blue_stained_glass_pane minecraft:light_gray_stained_glass minecraft:light_gray_stained_glass_pane minecraft:lime_stained_glass minecraft:lime_stained_glass_pane minecraft:magenta_stained_glass minecraft:magenta_stained_glass_pane minecraft:orange_stained_glass minecraft:orange_stained_glass_pane minecraft:pink_stained_glass minecraft:pink_stained_glass_pane minecraft:purple_stained_glass minecraft:purple_stained_glass_pane minecraft:red_stained_glass minecraft:red_stained_glass_pane minecraft:white_stained_glass minecraft:white_stained_glass_pane minecraft:yellow_stained_glass minecraft:yellow_stained_glass_pane minecraft:glass_pane minecraft:glass
 
-block.10003 = oak_leaves minecraft:spruce_leaves minecraft:birch_leaves minecraft:jungle_leaves minecraft:acacia_leaves minecraft:dark_oak_leaves
+block.10003 = minecraft:vine minecraft:oak_leaves minecraft:spruce_leaves minecraft:birch_leaves minecraft:jungle_leaves minecraft:acacia_leaves minecraft:dark_oak_leaves
+
+
+block.10004 = minecraft:lily_of_the_valley minecraft:cornflower minecraft:kelp_plant minecraft:tripwire minecraft:melon_stem minecraft:pumpkin_stem minecraft:attached_melon_stem minecraft:attached_pumpkin_stem   minecraft:large_fern minecraft:tall_grass minecraft:peony minecraft:rose_bush minecraft:lilac minecraft:sunflower minecraft:lily_pad minecraft:cobweb minecraft:seagrass
+
 
 block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:magma_block  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:campfire:lit=true minecraft:shroomlight minecraft:nether_portal
 
-block.10006 = minecraft:lava minecraft:fire
+block.10006 = minecraft:grass_block:snowy=true minecraft:packed_ice minecraft:snow minecraft:horn_coral_wall_fan minecraft:fire_coral_wall_fan minecraft:bubble_coral_wall_fan minecraft:brain_coral_wall_fan minecraft:tube_coral_wall_fan minecraft:frosted_ice minecraft:blue_ice minecraft:dead_horn_coral_fan minecraft:dead_fire_coral_fan minecraft:dead_bubble_coral_fan minecraft:dead_brain_coral_fan minecraft:dead_tube_coral_fan minecraft:horn_coral_fan minecraft:fire_coral_fan minecraft:bubble_coral_fan minecraft:brain_coral_fan minecraft:tube_coral_fan minecraft:dead_tube_coral minecraft:dead_horn_coral minecraft:dead_fire_coral minecraft:dead_bubble_coral minecraft:dead_brain_coral minecraft:horn_coral minecraft:fire_coral minecraft:bubble_coral minecraft:brain_coral minecraft:tube_coral minecraft:sea_pickle minecraft:brown_mushroom minecraft:red_mushroom minecraft:melon minecraft:jack_o_lantern minecraft:pumpkin minecraft:carved_pumpkin minecraft:snow_block minecraft:cactus 
 
-block.10007 = minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_fire minecraft:end_rod minecraft:sea_lantern minecraft:soul_lantern minecraft:end_gateway minecraft:soul_campfire:lit=true 
+block.10007 = minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_fire minecraft:end_rod minecraft:sea_lantern minecraft:soul_lantern minecraft:end_gateway minecraft:soul_campfire:lit=true minecraft:lava minecraft:fire
 
 block.10008=minecraft:sunflower:half=lower minecraft:lilac:half=lower minecraft:tall_grass:half=lower minecraft:large_fern:half=lower minecraft:rose_bush:half=lower minecraft:peony:half=lower minecraft:tall_seagrass:half=lower
 
@@ -28,12 +32,12 @@ block.8 = minecraft:water minecraft:flowing_water
 
 block.79 = minecraft:ice
 	  
-block.100 = minecraft:cyan_wall_banner
 
 
 
 
 
+ 
 
 
 
