--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -33,7 +33,7 @@ block.79 = minecraft:ice
 	  
 block.500 = minecraft:white_carpet minecraft:orange_carpet minecraft:magenta_carpet minecraft:light_blue_carpet minecraft:yellow_carpet minecraft:lime_carpet minecraft:pink_carpet minecraft:gray_carpet minecraft:light_gray_carpet minecraft:cyan_carpet minecraft:purple_carpet minecraft:blue_carpet minecraft:brown_carpet minecraft:green_carpet minecraft:red_carpet minecraft:black_carpet
 
-block.300=minecraft:white_wool minecraft:orange_wool minecraft:magenta_wool minecraft:light_blue_wool minecraft:yellow_wool minecraft:lime_wool minecraft:pink_wool minecraft:gray_wool minecraft:light_gray_wool minecraft:cyan_wool minecraft:purple_wool minecraft:blue_wool minecraft:brown_wool minecraft:green_wool minecraft:red_wool minecraft:black_wool minecraft:melon minecraft:pumpkin minecraft:honey_block minecraft:slime_block
+block.300=minecraft:white_wool minecraft:orange_wool minecraft:magenta_wool minecraft:light_blue_wool minecraft:yellow_wool minecraft:lime_wool minecraft:pink_wool minecraft:gray_wool minecraft:light_gray_wool minecraft:cyan_wool minecraft:purple_wool minecraft:blue_wool minecraft:brown_wool minecraft:green_wool minecraft:red_wool minecraft:black_wool minecraft:melon minecraft:pumpkin 
  
 
 block.100 = minecraft:white_wall_banner minecraft:orange_wall_banner minecraft:magenta_wall_banner minecraft:light_blue_wall_banner minecraft:yellow_wall_banner minecraft:lime_wall_banner minecraft:pink_wall_banner minecraft:gray_wall_banner minecraft:light_gray_wall_banner minecraft:cyan_wall_banner minecraft:purple_wall_banner minecraft:blue_wall_banner minecraft:brown_wall_banner minecraft:green_wall_banner minecraft:red_wall_banner minecraft:black_wall_banner
@@ -45,7 +45,7 @@ block.200 = minecraft:white_banner minecraft:orange_banner minecraft:magenta_ban
 
 
 
-
+block.400= minecraft:wither_rose minecraft:sunflower minecraft:lilac minecraft:tall_grass minecraft:large_fern minecraft:rose_bush minecraft minecraft:tall_seagrass minecraft:weeping_vines minecraft:twisting_vines minecraft:warped_roots minecraft:nether_sprouts minecraft:sweet_berry_bush minecraft:crimson_roots minecraft:crimson_fungus minecraft:warped_fungus
 
 
 
