--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -1,14 +1,14 @@
 #if MC_VERSION >= 11300
 
 
-block.10001= minecraft:wheat minecraft:beetroots minecraft:potatoes minecraft:carrots minecraft:oxeye_daisy minecraft:pink_tulip minecraft:white_tulip minecraft:orange_tulip minecraft:red_tulip minecraft:azure_bluet minecraft:allium minecraft:blue_orchid minecraft:poppy minecraft:dandelion minecraft:grass minecraft:dead_bush minecraft:fern minecraft:oak_sapling minecraft:spruce_sapling minecraft:birch_sapling minecraft:jungle_sapling minecraft:acacia_sapling minecraft:dark_oak_sapling
+block.10001= minecraft:wheat minecraft:beetroots minecraft:potatoes minecraft:carrots minecraft:oxeye_daisy minecraft:pink_tulip minecraft:white_tulip minecraft:orange_tulip minecraft:red_tulip minecraft:azure_bluet minecraft:allium minecraft:blue_orchid minecraft:poppy minecraft:dandelion minecraft:grass minecraft:dead_bush minecraft:fern minecraft:oak_sapling minecraft:spruce_sapling minecraft:birch_sapling minecraft:jungle_sapling minecraft:acacia_sapling minecraft:dark_oak_sapling minecraft:wither_rose minecraft:lily_of_the_valley
 
 block.10002= minecraft:black_stained_glass minecraft:black_stained_glass_pane minecraft:blue_stained_glass minecraft:blue_stained_glass_pane  minecraft:brown_stained_glass minecraft:brown_stained_glass_pane minecraft:cyan_stained_glass minecraft:cyan_stained_glass_pane  minecraft:gray_stained_glass minecraft:gray_stained_glass_pane minecraft:green_stained_glass minecraft:green_stained_glass_pane minecraft:light_blue_stained_glass minecraft:light_blue_stained_glass_pane minecraft:light_gray_stained_glass minecraft:light_gray_stained_glass_pane minecraft:lime_stained_glass minecraft:lime_stained_glass_pane minecraft:magenta_stained_glass minecraft:magenta_stained_glass_pane minecraft:orange_stained_glass minecraft:orange_stained_glass_pane minecraft:pink_stained_glass minecraft:pink_stained_glass_pane minecraft:purple_stained_glass minecraft:purple_stained_glass_pane minecraft:red_stained_glass minecraft:red_stained_glass_pane minecraft:white_stained_glass minecraft:white_stained_glass_pane minecraft:yellow_stained_glass minecraft:yellow_stained_glass_pane minecraft:glass_pane minecraft:glass
 
-block.10003 = minecraft:vine minecraft:oak_leaves minecraft:spruce_leaves minecraft:birch_leaves minecraft:jungle_leaves minecraft:acacia_leaves minecraft:dark_oak_leaves
+block.10003 = minecraft:vine minecraft:oak_leaves minecraft:spruce_leaves minecraft:birch_leaves minecraft:jungle_leaves minecraft:acacia_leaves minecraft:dark_oak_leaves minecraft:weeping_vines minecraft:twisting_vines minecraft:warped_roots minecraft:nether_sprouts minecraft:sweet_berry_bush minecraft:crimson_roots minecraft:crimson_fungus minecraft:warped_fungus
 
 
-block.10004 = minecraft:lily_of_the_valley minecraft:cornflower minecraft:kelp_plant minecraft:tripwire minecraft:melon_stem minecraft:pumpkin_stem minecraft:attached_melon_stem minecraft:attached_pumpkin_stem   minecraft:large_fern minecraft:tall_grass minecraft:peony minecraft:rose_bush minecraft:lilac minecraft:sunflower minecraft:lily_pad minecraft:cobweb minecraft:seagrass
+block.10004 =  minecraft:cornflower minecraft:kelp_plant minecraft:tripwire minecraft:melon_stem minecraft:pumpkin_stem minecraft:attached_melon_stem minecraft:attached_pumpkin_stem  minecraft:lily_pad minecraft:seagrass
 
 
 block.10005 = minecraft:glowstone minecraft:torch minecraft:wall_torch minecraft:lava minecraft:fire minecraft:redstone_torch minecraft:redstone_wall_torch minecraft:jack_o_lantern minecraft:magma_block  minecraft:redstone_lamp:lit=true  minecraft:lantern minecraft:campfire:lit=true minecraft:shroomlight minecraft:nether_portal minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_fire minecraft:end_rod minecraft:sea_lantern minecraft:soul_lantern minecraft:end_gateway minecraft:soul_campfire:lit=true minecraft:lava minecraft:fire
@@ -41,11 +41,6 @@ block.100 = minecraft:white_wall_banner minecraft:orange_wall_banner minecraft:m
 block.200 = minecraft:white_banner minecraft:orange_banner minecraft:magenta_banner minecraft:light_blue_banner minecraft:yellow_banner minecraft:lime_banner minecraft:pink_banner minecraft:gray_banner minecraft:light_gray_banner minecraft:cyan_banner minecraft:purple_banner minecraft:blue_banner minecraft:brown_banner minecraft:green_banner minecraft:red_banner minecraft:black_banner
  
 
-
-
-
-
-block.400= minecraft:wither_rose minecraft:sunflower minecraft:lilac minecraft:tall_grass minecraft:large_fern minecraft:rose_bush minecraft minecraft:tall_seagrass minecraft:weeping_vines minecraft:twisting_vines minecraft:warped_roots minecraft:nether_sprouts minecraft:sweet_berry_bush minecraft:crimson_roots minecraft:crimson_fungus minecraft:warped_fungus
 
 
 
