stuff like muns and stuffs like zooms

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -171,9 +171,8 @@ uniform.vec3.shadowLightVec = vec3(lightSign*shSunX, lightSign*shSunY, lightSign
 uniform.float.shadowMaxProj = 150.0/abs(sunPosY)
 
 
-
-
-
+variable.float.moonDirectionNorm = 1.0 / sqrt((moonPosition.x * moonPosition.x) + (moonPosition.y * moonPosition.y) + (moonPosition.z * moonPosition.z))
+uniform.vec3.moonDirection = vec3(moonPosition.x * moonDirectionNorm, moonPosition.y * moonDirectionNorm, moonPosition.z * moonDirectionNorm)
 
 
 # Profiles #
