fix reflections + stuff

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -92,7 +92,7 @@ screen.Shadows = [Filtering] shadowMapResolution shadowDistance <empty> <empty> 
 
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
 
-screen.PBR = PBR <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT
+screen.PBR = PBR <empty> SPEC_SCREENSPACE_REFLECTIONS POM2  USE_LUMINANCE_AS_HEIGHTMAP EMISSIVES POM_MAP_RES POM_DEPTH MAX_ITERATIONS MAX_DIST BUMP_MULT SPEC_MULTIPLIER
 
 screen.SSPT = SSPT GI  <empty> <empty> RAYS STEPSIZE MAXSTEPS MAXLENGTH SSPT_MODE RT_FILTER
 
