--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -107,7 +107,7 @@ screen.Tonemapping = TONEMAP <empty> USE_ACES_COLORSPACE_APPROXIMATION SATURATIO
 screen.DepthOfField = DOF BOKEH_MODE EXCLUDE_MODE <empty> <empty> <empty> DOF_MODE MANUAL_FOCUS focal aperture DoF_Adaptation_Speed
 texture.noise=texture/noises.png
 texture.composite.colortex6=texture/blueNoise.png
-
+texture.gbuffers.gaux3=texture/wave.png
 
 separateAo=true
 
