--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -42,7 +42,7 @@ screen.Water_and_transparencies = Dirt_Amount Dirt_Mie_Phase rayMarchSampleCount
 screen.Advanced = Dirt_Scatter_R Dirt_Scatter_G Dirt_Scatter_B Dirt_Absorb_R Dirt_Absorb_G Dirt_Absorb_B Water_Absorb_R Water_Absorb_G Water_Absorb_B
 screen.TAA_OPTIONS= TAA <empty> BLEND_FACTOR CLOSEST_VELOCITY NO_CLIP TAA_UPSCALING RENDER_SCALE_X RENDER_SCALE_Y
 
-screen.Lighting= [Torch] [Sky] [Ambient] SPEC SPEC_REF
+screen.Lighting= [Torch] [Sky] [Ambient] SPEC ROUGHREF
 screen.Torch = TORCH_R TORCH_G TORCH_B TORCH_AMOUNT Emissive_Strength
 screen.Sky=[Sky_coefficients] [Sun_and_Moon_Colors] sunPathRotation
 screen.Sky_coefficients = Sky_Brightness sky_mieg sky_coefficientRayleighR sky_coefficientRayleighG sky_coefficientRayleighB sky_coefficientMieR sky_coefficientMieG sky_coefficientMieB
