--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -8,7 +8,8 @@ stars=false
 vignette=false
 dynamicHandLight=true
 
-program.composite7.enabled=TAA_UPSCALING
+program.composite8.enabled=TAA_UPSCALING
+program.composite1.enabled=ssptfilter
 #Get the correct alpha value : S_A*(1-DST_A)+DST_A
 blend.gbuffers_terrain=off
 blend.gbuffers_textured= SRC_ALPHA ONE_MINUS_SRC_ALPHA ONE_MINUS_DST_ALPHA ONE
