--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -129,7 +129,7 @@ uniform.vec3.shadowLightVec = vec3(lightSign*shSunX, lightSign*shSunY, lightSign
 uniform.float.shadowMaxProj = 150.0/abs(sunPosY)
 uniform.float.waveScale = if(in(biome_category,CAT_OCEAN,CAT_BEACH), 1.0, 0.0)*74.0+54.0
 
-uniform.float.averageFrameTime = smooth(10,frameTime*20)
+uniform.float.averageFrameTime = smooth(frameTime*10,50)
 
 
 
