fater filtering (all 4 passes are now on by default) + sharper reflections

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -56,7 +56,7 @@ screen.Ambient = MIN_LIGHT_AMOUNT SEPARATE_AO ambientOcclusionLevel Ambient_Mult
 
 screen.Shading =     [Shadows] [SSGI_Parameters] [POM] DISABLE_ALPHA_MIPMAPS Texture_MipMap_Bias  BICUBIC_UPSCALING CONTRAST_ADAPTATIVE_SHARPENING SHARPENING LABSSS
 screen.Shadows = [Filtering] SCREENSPACE_CONTACT_SHADOWS shadowMapResolution CLOUDS_SHADOWS CLOUDS_SHADOWS_STRENGTH shadowDistanceRenderMul shadowDistance SHADOW_FRUSTRUM_CULLING CAVE_LIGHT_LEAK_FIX SHADOW_DISABLE_ALPHA_MIPMAPS Stochastic_Transparent_Shadows
-screen.SSGI_Parameters = SSGI RAY_COUNT STEPS STEP_LENGTH SSPTMIX1  ssptfilter <empty> <empty> filterpass_0 filerpass_1 filterpass_2 filterpass_3
+screen.SSGI_Parameters = SSGI RAY_COUNT STEPS STEP_LENGTH SSPTMIX1  ssptfilter <empty> <empty> filterpass_0 filterpass_1 filterpass_2 filterpass_3
 screen.Filtering = Variable_Penumbra_Shadows VPS_Search_Samples Min_Shadow_Filter_Radius Max_Shadow_Filter_Radius Max_Filter_Depth SHADOW_FILTER_SAMPLE_COUNT
 screen.POM = POM Depth_Write_POM POM_DEPTH MAX_ITERATIONS MAX_DIST AutoGeneratePOMTextures
 screen.Camera = EXPOSURE_MULTIPLIER Exposure_Speed AUTO_EXPOSURE Manual_exposure_value BLOOM_STRENGTH BLOOM_QUALITY FinalR FinalG FinalB [Tonemapping]  [DepthOfField] [Purkinje_effect]
